--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4902,7 +4902,7 @@ margin-right: 12%;
   padding: 4px;
   margin-bottom: 20px;
   line-height: 1.42857143;
-  background-color: #fff;
+  background-color: #ab1010;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: border .2s ease-in-out;
