--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1086,7 +1086,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
@@ -4902,7 +4902,7 @@ margin-right: 12%;
   padding: 4px;
   margin-bottom: 20px;
   line-height: 1.42857143;
-  background-color: #ab1010;
+  background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: border .2s ease-in-out;
