--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3,7 +3,33 @@
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+ .midbox{
+   margin-left: 5%;
+   margin-right: 5%;
+   margin-bottom: 10%;
+ }
+ .bookApp{
+   padding: 30px 15px;
+ margin-top: 3%;
+   margin-bottom: 10%;
+   margin-left: 50%;
+ margin-right: 0%;
+   color: inherit;
+   background-color: #eee;
 
+ }
+ ul, li{
+ margin:0;
+ padding:0 0 0 15px;
+ }
+.multi-column{
+  width: 80%;
+  margin: 0 auto;
+}
+ .column{
+     float: left;
+     margin: 0 20px 0 0;
+ }
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
@@ -12,9 +38,11 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 45%;
   position: relative;
+  float: left;
   margin: auto;
+
 }
 
 /* Caption text */
@@ -4928,8 +4956,8 @@ a.badge:focus {
 }
 .jumbotron {
   padding: 30px 15px;
-margin-top: 6%;
-  margin-bottom: 12%;
+margin-top: 0%;
+  margin-bottom: 3%;
   margin-left: 12%;
 margin-right: 12%;
   color: inherit;
@@ -4941,11 +4969,11 @@ margin-right: 12%;
 }
 .jumbotron p {
   margin-bottom: 15px;
-  font-size: 21px;
+  font-size: 20px;
   font-weight: 200;
 }
 .jumbotron > hr {
-  border-top-color: #d5d5d5;
+  border-top-color: #270B61;
 }
 .container .jumbotron,
 .container-fluid .jumbotron {
