--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3,6 +3,10 @@
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+ p{
+  padding-left: 5%;
+  padding-right: 5%;
+ }
  .midbox{
    margin-left: 5%;
    margin-right: 5%;
@@ -16,6 +20,7 @@
  margin-right: 0%;
    color: inherit;
    background-color: #eee;
+   border-radius: 10px;
 
  }
  ul, li{
@@ -23,7 +28,7 @@
  padding:0 0 0 15px;
  }
 .multi-column{
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
 }
  .column{
@@ -1421,6 +1426,7 @@ mark,
 }
 .text-center {
   text-align: center;
+  font-size: 16px;
 }
 .text-justify {
   text-align: justify;
@@ -4962,6 +4968,7 @@ margin-top: 0%;
 margin-right: 12%;
   color: inherit;
   background-color: #eee;
+  border-radius: 10px;
 }
 .jumbotron h1,
 .jumbotron .h1 {
