--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3,112 +3,8 @@
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
- p{
-  padding-left: 5%;
-  padding-right: 5%;
- }
- .midbox{
-   margin-left: 5%;
-   margin-right: 5%;
-   margin-bottom: 10%;
- }
- .bookApp{
-   padding: 30px 15px;
- margin-top: 3%;
-   margin-bottom: 10%;
-   margin-left: 50%;
- margin-right: 0%;
-   color: inherit;
-   background-color: #eee;
-   border-radius: 10px;
 
- }
- ul, li{
- margin:0;
- padding:0 0 0 15px;
- }
-.multi-column{
-  width: 90%;
-  margin: 0 auto;
-}
- .column{
-     float: left;
-     margin: 0 20px 0 0;
- }
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 45%;
-  position: relative;
-  float: left;
-  margin: auto;
-
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 0px;
-  width: 0px;
-  margin: 0 0px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
-//-------------------------------------------------------------------------------------
-
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -1190,7 +1086,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: 'Roboto Slab', serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
@@ -1426,7 +1322,6 @@ mark,
 }
 .text-center {
   text-align: center;
-  font-size: 16px;
 }
 .text-justify {
   text-align: justify;
@@ -4962,13 +4857,9 @@ a.badge:focus {
 }
 .jumbotron {
   padding: 30px 15px;
-margin-top: 0%;
-  margin-bottom: 3%;
-  margin-left: 12%;
-margin-right: 12%;
+  margin-bottom: 30px;
   color: inherit;
   background-color: #eee;
-  border-radius: 10px;
 }
 .jumbotron h1,
 .jumbotron .h1 {
@@ -4976,11 +4867,11 @@ margin-right: 12%;
 }
 .jumbotron p {
   margin-bottom: 15px;
-  font-size: 20px;
+  font-size: 21px;
   font-weight: 200;
 }
 .jumbotron > hr {
-  border-top-color: #270B61;
+  border-top-color: #d5d5d5;
 }
 .container .jumbotron,
 .container-fluid .jumbotron {
