--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,10 +1,105 @@
-/*!
- * Bootstrap v3.3.4 (http://getbootstrap.com)
- * Copyright 2011-2015 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
 
+ p{
+  padding-left: 7%;
+  padding-right: 7%;
+  font: 16px;
+ }
+ .midbox{
+   margin-left: 5%;
+   margin-right: 5%;
+   margin-bottom: 10%;
+ }
+footer{
+  background-color: black;
+  font-style: italic;
+  color: white;
+}
+ ul, li{
+ margin:0;
+ padding:0 0 0 15px;
+ }
+.multi-column{
+  width: 50%;
+  margin: auto;
+}
+ .column{
+     float: left;
+     margin: 0 20px 0 0;
+ }
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 45%;
+  position: relative;
+  float: left;
+  margin: auto;
+
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 0px;
+  width: 0px;
+  margin: 0 0px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+//-------------------------------------------------------------------------------------
+
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -1086,7 +1181,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
@@ -1322,6 +1417,7 @@ mark,
 }
 .text-center {
   text-align: center;
+  font-size: 16px;
 }
 .text-justify {
   text-align: justify;
@@ -4857,9 +4953,13 @@ a.badge:focus {
 }
 .jumbotron {
   padding: 30px 15px;
-  margin-bottom: 30px;
+  margin-top: 0%;
+  margin-bottom: 3%;
+  margin-left: 12%;
+  margin-right: 12%;
   color: inherit;
   background-color: #eee;
+  border-radius: 10px;
 }
 .jumbotron h1,
 .jumbotron .h1 {
@@ -4867,11 +4967,11 @@ a.badge:focus {
 }
 .jumbotron p {
   margin-bottom: 15px;
-  font-size: 21px;
+  font-size: 20px;
   font-weight: 200;
 }
 .jumbotron > hr {
-  border-top-color: #d5d5d5;
+  border-top-color: #270B61;
 }
 .container .jumbotron,
 .container-fluid .jumbotron {
